examples/misc/error/compilation/eval_zero-div_div.bfml
let _ = 123 / 0

let main = []